# NWeight

./: AUTHORS  HHTECH.inst.lib  KTLane.vpj  KTLane.vpw  Lane.opensdf  Lane.sln  Lane.vcproj  Lane.vcxproj  Lane.vcxproj.filters  LaneX86.vcxproj  Makefile  Makefile.am  Makefile.in  NEWS  README  UpgradeLog.XML  Version  autogen.sh  build-emrc-26  build.sh  buildPro_R3  buildemrc  buildlib-emrc  config.status  config.status.lineno  configure  configure.in  myhbuild
EMRCV3/CONFIG/: AppFunction.ini  BaseConfig.ini  CommunctionConfig.ini  Config.ini  ParameterFileList.ini
EMRCV3/PARAMETER/: CARKINDTABLE.TXT  COLLECT.TXT  FARELIST.TXT  JOUCODE.TXT  SVRCARDLIST.TXT  YHKLIST.TXT  YHRATE.TXT  YPKLIST.TXT
EMRCV4/: rc.local
EMRCV4/CONFIG/: AppFunction.ini  (+5 more)
HCDVR/: .cproject  .project  HCDVR.cpp  HCDVR.h  hcnetsdk.h
TCS.Installer/: TCS.Installer.sln
src/: LsFile  Makefile.am  buildemrc  createver.sh
src/RemoteControl/include/: RemoteControl.h  UdpBase.h
src/SQLite/: CreateTable.sql  EmrcDBOperator.c
src/SQLite/include/: EmrcDBOperator.h
src/SetConifgFile/: SetConfigWorkState.c
src/SetConifgFile/include/: SetConfigWorkState.h
src/SubProgarm/: ClearAndArchiveData.c  LsFile.c  SmartUpdate.c  Sync.c  Uploader.c
src/Test/: AutoRunWorkFlow.c
src/communication/: EmrcSocket.c  Emrc_Udp.c  MessageBuild.c  MessageHandl.c  RecvMessageDataHandl.c  Udp.c
src/communication/include/: EmrcSocket.h  Emrc_Udp.h  MessageBuild.h  MessageDef.h  MessageHandl.h  RecvMessageDataHandl.h  Udp.h
src/csc_rhy_dll/csc_rhy_dll/: 3des.c  3des.h  IcKey.c  IcKey.h  LocalIncludeFile.h  MIF_Interface.c  MIF_Interface.h  dal_imf.c  dal_imf.h  i_dev_ic.c  i_dev_ic.h  linux_include.h  mac.c  mac.h
src/dev/: CPSB.c  IO_BaseIO_State.c  IO_Board_Test.c  MIF_Interface.c  MemSyncFile.c  VideoCaptureImage.c  device.c  i_dev_VPR.c  i_dev_ic.c  i_dev_ioboard.c  i_dev_keyboard.c  i_dev_vdm.c
src/dev/Com/: Com.c
src/dev/ICR/: i_dev_ICR_JY2.c
src/dev/ICR/inlcude/: IccReader.h  MIF_Interface.h  i_dev_ICR_JY2.h
src/dev/IO/: i_dev_IO_SAT.c
src/dev/IO/include/: i_dev_IO_SAT.h
src/dev/Print/: i_dev_KK_printer.c  i_dev_S303_printer.c  i_dev_TWD_printer.c  i_dev_printer.c
src/dev/Print/include/: i_dev_KK_printer.h  i_dev_S303_printer.h  i_dev_TWD_printer.h
src/dev/TFI/: i_dev_TFI_303.c  i_dev_TFI_CJ.c  i_dev_TFI_HFW - 副本.c  i_dev_TFI_HFW.c  i_dev_TFI_HN.c  i_dev_TFI_KK.c  i_dev_TFI_KY.c  i_dev_TFI_MNS.c  i_dev_TFI_RHY.c  i_dev_TFI_SG.c  i_dev_TFI_STD.c  i_dev_TFI_YM.c  i_dev_led.c
src/dev/TFI/include/: i_dev_TFI_303.h  i_dev_TFI_CJ.h  i_dev_TFI_KK.h  i_dev_TFI_KY.h  i_dev_TFI_MNS.h  i_dev_TFI_RHY.h  i_dev_TFI_SG.h  i_dev_TFI_STD.h  i_dev_TFI_YM.h
src/dev/VDM/: i_dev_VDM_SAT.c
src/dev/VDM/include/: i_dev_VDM_SAT.h
src/dev/VPR/: i_dev_VPR_HK.c  i_dev_VPR_HW.c
src/dev/VPR/include/: i_dev_VPR_HK.h  i_dev_VPR_HW.h
src/dev/Weight/: Weight_InterFace.c  wds_protocol.c  wds_thread.c
src/dev/Weight/include/: Weight_InterFace.h
src/dev/include/: CPSB.h  IO_Board.h  MIF_Interface.h  MemSyncFile.h  VideoCaptureImage.h  device.h  i_dev_TFI_303.h  i_dev_TFI_HFW.h  i_dev_TFI_HN.h  i_dev_TFI_KK.h  i_dev_VPR.h  i_dev_ic.h  i_dev_ioboard.h  i_dev_keyboard.h  i_dev_vdm.h  tfi_lib.h  wds_protocol.h  wds_thread.h
src/global/: 3des.c  FileOperator.c  carlist.c  common_ic_methods.c  common_main.c  global.c  imf.c  list.c  mac.c  serial.c
src/global/include/: LocalIncludeFile.h  Version.h  carlist.h  common_ic_methods.h  common_main.h  global.h  imf.h  linux_include.h  list.h  serial.h
src/logc/: LogC.c
src/logc/include/: LogC.h
src/messageBody/: ExitBS.c  ExitEI.c  ExitES.c  ExitHt.c  ExitTR.c  ExitVI.c  LaneInfo.c  MsgAK.c  MsgEI.c  MsgEM.c  MsgGR.c  MsgInfo.c  MsgOF.c  MsgRevsion.c  SendMsg.c
src/messageBody/include/: ExitBS.h  ExitEI.h  ExitES.h  ExitHt.h  ExitTR.h  ExitVI.h  LaneInfo.h  MsgAK.h  MsgEI.h  MsgEM.h  MsgGR.h  MsgInfo.h  MsgOF.h  MsgRevsion.h  SendMsg.h  TrafficStat.h
src/msgQueueToFile/include/: SaveMsg.h
src/parameter/: ConstantTable.c  FreeCarList.c  ParameterCarClass.c  ParameterCollect.c  ParameterFareList.c  ParameterLaneNo.c  ParameterPlaza.c  ParameterStaff.c  ParameterTable.c  ParameterYHKList.c  ParameterYHRateDescription.c  ParameterYPKList.c  SVRCardList.c  parameterCarKind.c
src/parameter/include/: ConstantTable.h  FreeCarList.h  ParameterCarClass.h  ParameterCollect.h  ParameterFareList.h  ParameterLaneNo.h  ParameterPlaza.h  ParameterStaff.h  ParameterTable.h  ParameterYHKList.h  ParameterYHRateDescription.h  ParameterYPKList.h  SVRCardList.h  parameterCarKind.h
src/sysconfig/: AppFunctionConfig.c  CommunctionConfig.c  IcKey.c  LanConfig.c  ParameterFileList.c  TTYConfig.c
src/sysconfig/include/: AppFunctionConfig.h  AppUseFilePathAndName.h  CommunctionConfig.h  IcKey.h  LanConfig.h  ParameterFileList.h  TTYConfig.h
src/systemcontext/: CarInfoContext.c  CardContext.c  ClearDebtTmp.c  DeviceContext.c  FareCalculation.c  FareContext.c  FileContext.c  Image.c  LaneContext.c  MethodPayContext.c  SwitchContext.c  UserContext.c  WeightContext.c  systemContext.c
src/systemcontext/include/: CarInfoContext.h  CardContext.h  DeviceContext.h  FareCalculation.h  FareContext.h  FileContext.h  Image.h  LaneContext.h  MethodPayContext.h  SwitchContext.h  UserContext.h  WeightContext.h  systemContext.h
src/ui/: UI_InterFace.c  ui.c
src/ui/640_480/: From_640_480.c
src/ui/640_480/include/: 640_480.h  From_640_480.h
src/ui/800_600/: From_800_600.c  From_Unit_800_600.c
src/ui/800_600/include/: 800_600.h  From_800_600.h
src/ui/include/: UI_InterFace.h  UI_Macro.h  emrcver.h  ui.h
src/workflow/: init.c  setWorkState.c  st_main.c  wf_ic.c  wf_ioboard.c  wf_printer.c  workstate_Driver.c  workstate_Login_Logout.c  workstate_Lstdnyc.c  workstate_Month_Abate.c  workstate_QianKuan.c  workstate_Urgent.c  workstate_WeightMenu.c  workstate_ic.c  workstate_main.c  workstate_peccancy.c  workstate_simulate_first.c  workstate_simulate_second.c  workstate_test.c
src/workflow/include/: init.h  setWorkState.h  st_main.h  wf_printer.h  workState.h  workstate_Lstdnyc.h
(+50 files in other folders)
